--- a/config.toml
+++ b/config.toml
@@ -4,8 +4,9 @@
 REGISTRY_NAME = "tauffer-consulting"
 
 # The name of this Pieces repository
-REPOSITORY_NAME = "default_domino_pieces_tests"
+REPOSITORY_NAME = "default_domino_pieces"
+REPOSITORY_LABEL = "Default Pieces Repository"
 
 # The version of this Pieces release
 # Attention: changing this will create a new release 
-VERSION = "0.0.1"
+VERSION = "0.0.2"
