--- a/.github/workflows/validate-and-organize.yml
+++ b/.github/workflows/validate-and-organize.yml
@@ -7,7 +7,6 @@ on:
     paths:
       - 'config.toml'
 
-
 jobs:
   validate-and-organize:
     runs-on: ubuntu-latest
@@ -18,22 +17,16 @@ jobs:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
           fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
 
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v3
         with:
-          python-version: "3.8"
-    
-      # - name: Pip install from branch
-      #   run: |
-      #     git config --global url."https://${{ secrets.ACCESS_TOKEN }}@github".insteadOf https://github
-      #     python -m pip install -U pip
-      #     pip install --no-cache-dir git+https://github.com/Tauffer-Consulting/flowui.git@renaming
+          python-version: "3.10"
 
       - name: Pip install packages
         run: |
           python -m pip install -U pip
           pip install --no-cache-dir domino-py[cli]
-      
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -41,10 +34,21 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run organize, build and publish images
+      - name: pip list
+        run: pip list | grep domino
+
+      - name: Run organize and build images
+        run: |
+          domino piece organize --build-images --source-url=https://github.com/${{github.repository}}
+
+      - name: Skipping tests
+        run: |
+          echo 'Skipping tests'
+      
+      - name: Publish images
         env:
           GHCR_USERNAME: ${{ github.actor }}
-        run: domino piece organize --build-images --publish-images --registry-token=${{ secrets.GITHUB_TOKEN }}
+        run: domino piece publish-images --registry-token ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit files
         run: |
