--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 [repository]
 # The name of the github organization / person owner, e.g. tauffer-consulting.
 # Must be in lower-case letters
-REGISTRY_NAME = "tauffer-consulting"
+REGISTRY_NAME = "iisas"
 
 # The name of this Pieces repository
 REPOSITORY_NAME = "default_domino_pieces_tests"
