--- a/.github/workflows/validate-and-organize.yml
+++ b/.github/workflows/validate-and-organize.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Run organize and build images
         run: |
-          domino piece organize --build-images --source-url=https://github.com/${{github.repository}}
+          domino piece-repository organize --build-images --source-url=https://github.com/${{github.repository}}
 
       - name: Skipping tests
         run: |
@@ -48,7 +48,7 @@ jobs:
       - name: Publish images
         env:
           GHCR_USERNAME: ${{ github.actor }}
-        run: domino piece publish-images --registry-token ${{ secrets.GITHUB_TOKEN }}
+        run: domino piece-repository publish-images --registry-token ${{ secrets.GITHUB_TOKEN }}
 
       - name: Commit files
         run: |
@@ -67,4 +67,4 @@ jobs:
         env:
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: domino piece release
+        run: domino piece-repository release
